{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 16,
  "lineage": "a57d5830-a1c6-b21d-c1fc-6d5f1b271eb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "vpc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:159418346395:route-table/rtb-0397609d915f97b4e",
            "default_route_table_id": "rtb-0397609d915f97b4e",
            "id": "rtb-0397609d915f97b4e",
            "owner_id": "159418346395",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de2f0279e902a186",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc-main-RT"
            },
            "tags_all": {
              "Name": "demo-vpc-main-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0914b8418204ca7be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_vpc_ig",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fa3566765b81d2e",
            "domain": "vpc",
            "id": "eipalloc-04fa3566765b81d2e",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-76-45-98.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.45.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_vpc_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:159418346395:internet-gateway/igw-0de2f0279e902a186",
            "id": "igw-0de2f0279e902a186",
            "owner_id": "159418346395",
            "tags": {
              "Name": "demo_vpc_ig"
            },
            "tags_all": {
              "Name": "demo_vpc_ig"
            },
            "vpc_id": "vpc-0914b8418204ca7be"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fa3566765b81d2e",
            "connectivity_type": "public",
            "id": "nat-06e137e1a2378a262",
            "network_interface_id": "eni-0e4542dd5e60d8907",
            "private_ip": "10.0.1.46",
            "public_ip": "52.76.45.98",
            "subnet_id": "subnet-06c4832ce5eb1a184",
            "tags": {
              "Name": "demo-nat-gw"
            },
            "tags_all": {
              "Name": "demo-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.sub_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:159418346395:route-table/rtb-01cc229ff69f7cbc7",
            "id": "rtb-01cc229ff69f7cbc7",
            "owner_id": "159418346395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e137e1a2378a262",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_RT_PVT"
            },
            "tags_all": {
              "Name": "vpc_RT_PVT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0914b8418204ca7be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.demo-nat-gateway",
            "aws_subnet.sub_1",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-RT_PVT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a634093304161c59",
            "route_table_id": "rtb-01cc229ff69f7cbc7",
            "subnet_id": "subnet-052516247b731294e"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.demo-nat-gateway",
            "aws_route_table.vpc-route-table-private",
            "aws_subnet.sub_1",
            "aws_subnet.sub_2",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:159418346395:subnet/subnet-06c4832ce5eb1a184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c4832ce5eb1a184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159418346395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "first_subnet"
            },
            "tags_all": {
              "Name": "first_subnet"
            },
            "vpc_id": "vpc-0914b8418204ca7be"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:159418346395:subnet/subnet-052516247b731294e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052516247b731294e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159418346395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "second_subnet"
            },
            "tags_all": {
              "Name": "second_subnet"
            },
            "vpc_id": "vpc-0914b8418204ca7be"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:159418346395:vpc/vpc-0914b8418204ca7be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06cacaed8977b47dd",
            "default_route_table_id": "rtb-0397609d915f97b4e",
            "default_security_group_id": "sg-0bc4b5b6e2f25ecba",
            "dhcp_options_id": "dopt-0d2335c48e6d282e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0914b8418204ca7be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0397609d915f97b4e",
            "owner_id": "159418346395",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}